--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Digital Manga</title>
+  <title>JingleBerry Studios</title>
   <style>
     body {
       font-family: Calibri, sans-serif;
