--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>JingleBerry Studios</title>
+  <link rel="icon" href="favicon.png">
   <style>
     body {
       font-family: Calibri, sans-serif;
