)META) Update index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html>
 <head>
   <title>JingleBerry Studios</title>
+  <!-- Primary Meta Tags -->
+  <title>JingleBerry Productions</title>
+  <meta name="title" content="JingleBerry Productions" />
+  <meta name="description" content="The home website of JingleBerry Productions." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jingleberry.ddns.net/" />
+  <meta property="og:title" content="JingleBerry Productions" />
+  <meta property="og:description" content="The home website of JingleBerry Productions." />
+  <meta property="og:image" content="meme1.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://jingleberry.ddns.net/" />
+  <meta property="twitter:title" content="JingleBerry Productions" />
+  <meta property="twitter:description" content="The home website of JingleBerry Productions." />
+  <meta property="twitter:image" content="meme1.jpg" />
+  
+  <!-- Meta Tags Generated with https://metatags.io -->
   <link rel="icon" href="favicon.png">
   <style>
     body {
