--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <!-- Meta Tags Generated with https://metatags.io -->
   <link rel="icon" href="favicon.png">
   <style>
+  @import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
     body {
-      font-family: Calibri, sans-serif;
+      font-family: "Assistant";
       margin: 0;
       padding: 0;
       overflow-x:hidden;
@@ -171,10 +172,11 @@
       background-blend-mode: multiply;
       text-align: center;
       padding: 50px 0;
-      margin: 0 -50vw;
-      width: 200vw;
+      /* Remove the negative margin and set a fixed width */
+      width: 100%;
       border-bottom: 4vh solid #000;
     }
+
     
     #headline h1 {
       font-size: 48px;
