--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <style>
   @import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
     body {
-      font-family: "Assistant";
+      font-family: "Assistant", Calibri;
       margin: 0;
       padding: 0;
       overflow-x:hidden;
