--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="icon" href="favicon.png">
   <style>
   @import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Inconsolata&display=swap');
     body {
       font-family: "Assistant", Calibri;
       margin: 0;
@@ -181,7 +182,7 @@
     #headline h1 {
       font-size: 48px;
       color: white;
-      font-family: consolas !important;
+      font-family: consolas, inconsolata !important;
     }
   </style>
 </head>
